--- a/FrontendDIH/package.json
+++ b/FrontendDIH/package.json
@@ -18,9 +18,15 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@fortawesome/angular-fontawesome": "^0.14.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
+    "@types/datatables.net": "^1.10.28",
+    "angular-datatables": "^17.0.0",
     "bootstrap": "^5.3.2",
+    "datatables.net-dt": "^2.0.1",
+    "datatables.net-responsive-dt": "^3.0.0",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
