--- a/DBGenerator/pom.xml
+++ b/DBGenerator/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
         </dependency>
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.3.04</version>
+        </dependency>
 
     </dependencies>
 
