--- a/FrontendDIH/package.json
+++ b/FrontendDIH/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.2.0",
     "@fortawesome/angular-fontawesome": "^0.14.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@ng-select/ng-select": "^12.0.7",
     "@popperjs/core": "^2.11.8",
     "@types/datatables.net": "^1.10.28",
     "angular-datatables": "^17.0.0",
